<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Spindle" Id="{ea4437a0-3be0-40f3-9c3c-95cce3a73679}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_Spindle :
STRUCT
	DevState AT %I*	: UINT;
	in AT %I*	: ST_Spindle_in;
	out	 AT %Q* : ST_Spindle_out;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>