<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Spindle_in" Id="{59cc27d4-b52a-4fdf-aaa2-89041fd04b67}">
    <Declaration><![CDATA[TYPE ST_Spindle_in :
STRUCT
	flags	: ST_Spindle_in_bits;
	SpindleSpeed	: INT;
	MotorLoad	: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>