<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_Spindle_in_bits" Id="{8b458f07-314e-4fb9-811d-62fa9097dbbb}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '2'}
TYPE ST_Spindle_in_bits :
STRUCT
	Contactor1	: BIT;
	Contactor2	: BIT;
	DriveError	: BIT;
	RpmLT5		: BIT;	
	DI5			: BIT;
	DI6			: BIT;
	DI7			: BIT;
	DI8			: BIT;
	Reserved	: BIT;	// Force 2 bytes, probably not needed
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>